--- a/Home/index.html
+++ b/Home/index.html
@@ -19,10 +19,10 @@
         StreamVibe
       </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Movies & Shows</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Subscriptions</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="../Movies & Shows/movies.html">Movies & Shows</a></li>
+        <li><a href="../Support/Support.html">Support</a></li>
+        <li><a href="../Subscription/Subscription.html">Subscriptions</a></li>
       </ul>
       <div class="icons">
         <button class="icon-btn"><i class="fas fa-search"></i></button>
