--- a/Subscription/Subscription.html
+++ b/Subscription/Subscription.html
@@ -1,12 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support</title>
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Subscription page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="subscription.css" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="Images/Vector.svg" alt="Logo" />
+        StreamVibe
+      </div>
+      <ul class="nav-links">
+        <li><a href="Home.html">Home</a></li>
+        <li><a href="#">Movies & Shows</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="subscription.html">Subscriptions</a></li>
+      </ul>
+      <div class="icons">
+        <button class="icon-btn"><i class="fas fa-search"></i></button>
+        <button class="icon-btn"><i class="fas fa-bell"></i></button>
+      </div>
+    </nav>
+
+    <section class="plans">
+      <h1>Choose the plan that’s right for you</h1>
+      <p>
+        Join StreamVibe and select a flexible subscription option to suit your
+        viewing preferences. Get started for free and enjoy endless
+        entertainment!
+      </p>
+
+      <div class="plan-cards">
+        <div class="plan">
+          <h2>Basic Plan</h2>
+          <p>
+            Enjoy access to a basic library of movies and shows, including some
+            ads.
+          </p>
+          <div class="price">$9.99 <span>/month</span></div>
+          <button class="btn">Start Free Trial</button>
+          <button class="btn primary">Choose Plan</button>
+        </div>
+        <div class="plan">
+          <h2>Standard Plan</h2>
+          <p>
+            Access to a wider selection of movies and shows. Watch on two
+            screens simultaneously.
+          </p>
+          <div class="price">$12.99 <span>/month</span></div>
+          <button class="btn">Start Free Trial</button>
+          <button class="btn primary">Choose Plan</button>
+        </div>
+        <div class="plan">
+          <h2>Premium Plan</h2>
+          <p>
+            Access to the full library in 4K HDR, Dolby Atmos, and watch on 4
+            devices simultaneously.
+          </p>
+          <div class="price">$14.99 <span>/month</span></div>
+          <button class="btn">Start Free Trial</button>
+          <button class="btn primary">Choose Plan</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="comparison">
+      <h2>Compare our plans and find the right one for you</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Features</th>
+            <th>Basic</th>
+            <th>Standard <span class="badge">New</span></th>
+            <th>Premium</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Price</td>
+            <td>$9.99/month</td>
+            <td>$12.99/month</td>
+            <td>$14.99/month</td>
+          </tr>
+          <tr>
+            <td>Content</td>
+            <td>Basic selection</td>
+            <td>Wider selection</td>
+            <td>All content</td>
+          </tr>
+          <tr>
+            <td>Devices</td>
+            <td>1 device</td>
+            <td>2 devices</td>
+            <td>4 devices</td>
+          </tr>
+          <tr>
+            <td>Free Trial</td>
+            <td>7 days</td>
+            <td>7 days</td>
+            <td>7 days</td>
+          </tr>
+          <tr>
+            <td>Cancel Anytime</td>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>HDR</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Dolby Atmos</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Ad-Free</td>
+            <td>No</td>
+            <td>Yes (limited)</td>
+            <td>Yes (all)</td>
+          </tr>
+          <tr>
+            <td>Family Sharing</td>
+            <td>No</td>
+            <td>Up to 2 members</td>
+            <td>Up to 4 members</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <div class="Container">
+      <h2 class="BigText">Start your free trial today!</h2>
+      <p class="TextContent">
+        This is a clear and concise call to action that encourages users to sign
+        up for a free trial of Streamvibe.
+      </p>
+      <button class="Button1">Start a Free Trial</button>
+    </div>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-section">
+          <h4>Home</h4>
+          <ul>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">Devices</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Movies</h4>
+          <ul>
+            <li><a href="#">Genres</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">New Release</a></li>
+            <li><a href="#">Popular</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Shows</h4>
+          <ul>
+            <li><a href="#">Genres</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">New Release</a></li>
+            <li><a href="#">Popular</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Support</h4>
+          <ul>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h4>Subscription</h4>
+          <ul>
+            <li><a href="#">Plans</a></li>
+            <li><a href="#">Features</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section social">
+          <h4>Connect With Us</h4>
+          <div class="social-icons">
+            <a href="#"
+              ><img
+                src="Images/social-facebook-circular.svg"
+                alt="Facebook"
+                style="width: 40px"
+            /></a>
+            <a href="#"
+              ><img src="Images/icons8-x.svg" alt="Twitter" style="width: 40px"
+            /></a>
+            <a href="#"
+              ><img
+                src="Images/linkedin-circle.svg"
+                alt="LinkedIn"
+                style="width: 40px"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2023 streamwib, All Rights Reserved</p>
+        <div class="footer-links">
+          <a href="#">Terms of Use</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Cookie Policy</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
