--- a/Home/index.html
+++ b/Home/index.html
@@ -33,24 +33,23 @@
     
     <!-- start Hero section -->
 
-    <header class="hero">
-      <div class="overlay">
-        <div class="play-icon">
-          <img src="Images/Sub Container.png" alt="BackGround-Image" />
-        </div>
-        <h1 class="hero-title">The Best Streaming Experience</h1>
-        <p>
-          StreamVibe is the best streaming experience for watching your favorite
-          movies and shows on demand, anytime, anywhere. With <br />
-          StreamVibe, you can enjoy a wide variety of content, including the
-          latest blockbusters, classic movies, popular TV shows, and more.
-          <br />
-          You can also create your own watchlists, so you can easily find the
-          content you want to watch.
-        </p>
-        <button class="watch-btn">▶ Start Watching Now</button>
-      </div>
-    </header>
+   <header class="hero">
+  <div class="overlay">
+    <div class="play-icon">
+      <img src="Images/Sub Container.png" alt="BackGround-Image" />
+    </div>
+    <h1 class="hero-title">The Best Streaming Experience</h1>
+    <p>
+      StreamVibe is the best streaming experience for watching your favorite
+      movies and shows on demand, anytime, anywhere. With <br />
+      StreamVibe, you can enjoy a wide variety of content, including the
+      latest blockbusters, classic movies, popular TV shows, and more. <br />
+      You can also create your own watchlists, so you can easily find the
+      content you want to watch.
+    </p>
+    <button class="watch-btn">▶ Start Watching Now</button>
+  </div>
+</header>
  <!-- End Hero -->
     
      <!-- start FAQ section -->
