Adjust Home Page

--- a/MoviesAndShows/movies.html
+++ b/MoviesAndShows/movies.html
@@ -21,7 +21,7 @@
         StreamVibe
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/Home/index.html">Home</a></li>
         <li><a href="/MoviesAndShows/movies.html">Movies & Shows</a></li>
         <li><a href="/Support/Support.html">Support</a></li>
         <li><a href="/Subscription/Subscription.html">Subscriptions</a></li>
