Add Card-Section Too Home index.html

--- a/Home/index.html
+++ b/Home/index.html
@@ -51,7 +51,40 @@
   </div>
 </header>
  <!-- End Hero -->
-    
+    <!--start-cards section-->
+        <div class="stream">
+        <div class="streamContent">
+            <h1>We Provide you streaming experience across various devices.</h1>
+            <p>With StreamVibe, you can enjoy your favorite movies and TV shows anytime, anywhere. Our platform is designed to be compatible with a wide range of devices, ensuring that you never miss a moment of entertainment.</p>
+        </div>
+        <div class="cards">
+            <div class="card1">
+                <h2><span ><a href="#"><i class="fa-solid fa-mobile-screen-button"></i></a></span>Smart Phone</h2>
+                <p>StreamVibe is optimized for both Android and iOS smartphones. Download our app from the Google Play Store or the Apple App Store</p>
+            </div>
+            <div class="card2">
+                                <h2><span><a href="#"><i class="fa-solid fa-tablet-button" > </i></a>      </span>Tablet</h2>
+                <p>StreamVibe is optimized for both Android and iOS smartphones. Download our app from the Google Play Store or the Apple App Store</p>
+            </div>
+            <div class="card3">
+                <h2> <span> <a href="#"> <i class="fa-solid fa-tv"></i></a></span>Smart TV</h2>
+                <p>StreamVibe is optimized for both Android and iOS smartphones. Download our app from the Google Play Store or the Apple App Store</p>
+            </div>
+            <div class="card4">
+                                <h2><a href="#"><i class="fa-solid fa-laptop"></i></a>LapTop</h2>
+                <p>StreamVibe is optimized for both Android and iOS smartphones. Download our app from the Google Play Store or the Apple App Store</p>
+            </div>
+            <div class="card5">
+                                <h2><spanGaming><a href=""> <i class="fa-solid fa-gamepad"></i></a></span>Gaming consoles</h2>
+                <p>StreamVibe is optimized for both Android and iOS smartphones. Download our app from the Google Play Store or the Apple App Store</p>
+            </div>
+            <div class="card6">
+                                <h2><span><a href="#"><i class="fa-solid fa-headset"></i></a></span>var Headsets</h2>
+                <p>StreamVibe is optimized for both Android and iOS smartphones. Download our app from the Google Play Store or the Apple App Store</p>
+            </div>
+        </div>
+    </div>
+    <!--rnd card section-->
      <!-- start FAQ section -->
        <div class="FAQ-Contener">
     <div class="head">
