--- a/Home/index.html
+++ b/Home/index.html
@@ -267,6 +267,57 @@
       </div>
     </div>
     <!-- END FAQ section -->
+<!-- Start Choose Your Plan -->
+        <div class="plan-section">
+    <div class="plan-header">
+        <div class="plan-header-text">
+            <h1>Choose the plan that’s right for you</h1>
+            <p>Join StreamVibe and select from our flexible subscription options tailored to suit your
+                 viewing preferences. Get ready for non-stop entertainment!</p>
+        </div>
+       
+        <div class="plan-header-button">
+            <button>Monthly</button>
+            <button>Yearly</button>
+        </div>
+    </div>
+    <div class="plans plan-cards">
+     <!-- Basic Plan -->
+    <div class="plan">
+      <h3>Basic Plan</h3>
+      <p>Enjoy an extensive library of movies and shows, featuring a range of content, including recently released titles.</p>
+      <div class="price">$9.99 <span class="month">/month</span></div>
+      <div class="buttons">
+        <button class="free-trial">Start Free Trial</button>
+        <button class="choose-plan">Choose Plan</button>
+      </div>
+    </div>
+
+    <!-- Standard Plan -->
+    <div class="plan">
+      <h3>Standard Plan</h3>
+      <p>Access to a wider selection of movies and shows, including most new releases and exclusive content.</p>
+      <div class="price">$12.99 <span class="month">/month</span></div>
+      <div class="buttons">
+        <button class="free-trial">Start Free Trial</button>
+        <button class="choose-plan">Choose Plan</button>
+      </div>
+    </div>
+
+    <!-- Premium Plan -->
+    <div class="plan">
+      <h3>Premium Plan</h3>
+      <p>Access to a widest selection of movies and shows, including all new releases and Offline Viewing.</p>
+      <div class="price">$14.99 <span class="month">/month</span></div>
+      <div class="buttons">
+        <button class="free-trial">Start Free Trial</button>
+        <button class="choose-plan">Choose Plan</button>
+      </div>
+    </div>
+
+    </div>
+</div>
+<!--  End Choose Your Plan -->
 
     <!-- Start Footer -->
     <div class="trial-box">
