Last Update NavBar & Hero Sections

--- a/Home/index.html
+++ b/Home/index.html
@@ -12,31 +12,40 @@
   </head>
 
   <body>
-    <!-- Start Navbar -->
-    <nav class="navbar">
+    <!--Last Updateeeeeeeeeee Start Navbar -->
+   <nav class="navbar">
       <div class="logo">
-        <img src="assets/Vector.svg" alt="Logo" />
+        <img src="Images/Vector.svg" alt="Logo" />
         StreamVibe
       </div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="../MoviesAndShows/movies.html">Movies & Shows</a></li>
-        <li><a href="../Support/Support.html">Support</a></li>
-        <li><a href="../Subscription/Subscription.html">Subscriptions</a></li>
+
+      <!-- زر المنيو -->
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+
+      <!-- اللينكات -->
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Movies & Shows</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="subscription.html">Subscriptions</a></li>
       </ul>
+
+      <!-- الأيقونات -->
       <div class="icons">
         <button class="icon-btn"><i class="fas fa-search"></i></button>
         <button class="icon-btn"><i class="fas fa-bell"></i></button>
       </div>
     </nav>
+
     <!-- End Navbar -->
 
     <!-- start Hero section -->
-
-    <header class="hero">
+<header class="hero">
       <div class="overlay">
         <div class="play-icon">
-          <img src="assets/Sub Container.png" alt="BackGround-Image" />
+          <img src="Images/Sub Container.png" alt="BackGround-Image" />
         </div>
         <h1 class="hero-title">The Best Streaming Experience</h1>
         <p>
