Last Update Subscription.html

--- a/Subscription/Subscription.html
+++ b/Subscription/Subscription.html
@@ -16,12 +16,21 @@
         <img src="Images/Vector.svg" alt="Logo" />
         StreamVibe
       </div>
-      <ul class="nav-links">
+
+      <!-- زر المنيو -->
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+
+      <!-- اللينكات -->
+      <ul class="nav-links" id="nav-links">
         <li><a href="Home.html">Home</a></li>
         <li><a href="#">Movies & Shows</a></li>
         <li><a href="#">Support</a></li>
         <li><a href="subscription.html">Subscriptions</a></li>
       </ul>
+
+      <!-- الأيقونات -->
       <div class="icons">
         <button class="icon-btn"><i class="fas fa-search"></i></button>
         <button class="icon-btn"><i class="fas fa-bell"></i></button>
@@ -226,5 +235,8 @@
         </div>
       </div>
     </footer>
+
+
+    <script src="script.js"></script>
   </body>
 </html>
