--- a/MoviesAndShows/movies.html
+++ b/MoviesAndShows/movies.html
@@ -15,17 +15,26 @@
   </head>
   <body>
     <!-- Start Navbar -->
-    <nav class="navbar">
+   <nav class="navbar">
       <div class="logo">
-        <img src="assets/Images/Vector.svg" alt="Logo" />
+        <img src="/assets/Images/Vector.svg" alt="Logo" />
         StreamVibe
       </div>
-      <ul class="nav-links">
-        <li><a href="/Home/index.html">Home</a></li>
-        <li><a href="/MoviesAndShows/movies.html">Movies & Shows</a></li>
-        <li><a href="/Support/Support.html">Support</a></li>
-        <li><a href="/Subscription/Subscription.html">Subscriptions</a></li>
+
+      <!-- زر المنيو -->
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+
+      <!-- اللينكات -->
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Movies & Shows</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="subscription.html">Subscriptions</a></li>
       </ul>
+
+      <!-- الأيقونات -->
       <div class="icons">
         <button class="icon-btn"><i class="fas fa-search"></i></button>
         <button class="icon-btn"><i class="fas fa-bell"></i></button>
