--- a/Movies-Open-Page/Movies-Open.html
+++ b/Movies-Open-Page/Movies-Open.html
@@ -6,16 +6,27 @@
     <title>Movies & Shows</title>
 </head>
 <body>
-       <nav class="navbar">
+    <!--Last Updateeeeeeeeeee Start Navbar -->
+   <nav class="navbar">
       <div class="logo">
-        <img style="width: 199px;height: 66px; " src="./images/Logo.png" alt="Logo" />
+        <img src="Images/Logo.png" alt="Logo" />
+        
       </div>
-      <ul class="nav-links">
+      
+      <!-- زر المنيو -->
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
+
+      <!-- اللينكات -->
+      <ul class="nav-links" id="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="#">Movies & Shows</a></li>
         <li><a href="#">Support</a></li>
-        <li><a href="#">Subscriptions</a></li>
+        <li><a href="subscription.html">Subscriptions</a></li>
       </ul>
+
+      <!-- الأيقونات -->
       <div class="icons">
         <button class="icon-btn"><i class="fas fa-search"></i></button>
         <button class="icon-btn"><i class="fas fa-bell"></i></button>
