--- a/MoviesAndShows/movies.html
+++ b/MoviesAndShows/movies.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <!-- Start Navbar -->
-   <nav class="navbar">
+    <nav class="navbar">
       <div class="logo">
-        <img src="/assets/Images/Vector.svg" alt="Logo" />
+        <img src="./assets/Images/Vector.svg" alt="Logo" />
         StreamVibe
       </div>
 
@@ -28,10 +28,10 @@
 
       <!-- اللينكات -->
       <ul class="nav-links" id="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="../Home/index.html">Home</a></li>
         <li><a href="#">Movies & Shows</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="subscription.html">Subscriptions</a></li>
+        <li><a href="../Support/Support.html">Support</a></li>
+        <li><a href="../Subscription/Subscription.html">Subscriptions</a></li>
       </ul>
 
       <!-- الأيقونات -->
